AppendixA/Kuma/envoy-proxy-02.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-dummy2
  namespace: appendix-kuma
data:
  envoy-config-02.yaml: |-
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: chapter3-1_service
              route_config:
                name: my_first_route_to_nowhere
                virtual_hosts:
                - name: dummy
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    direct_response:
                      status: 200
                      body:
                        inline_string: "V2----------Bootstrap Service Mesh Implementation with Istio----------V2"
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoydummy2
  namespace: appendix-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      name: envoydummy
      version: v2
  template:
    metadata:
      labels:
        name: envoydummy
        version: v2
        kuma.io/sidecar-injection: enabled
    spec:
      serviceAccountName: envoydummy
      containers:
      - name: envoyproxy
        image: envoyproxy/envoy:v1.22.2 
        args: ["-c","/tmp/envoy-config-02.yaml"]
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10000
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 10000
        volumeMounts:
        - name: envoy-dummy-cfg
          mountPath: /tmp
      volumes:
      - name: envoy-dummy-cfg
        configMap:
          name: envoy-dummy2
---
